# resume-studio

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
app/: __init__.py  __main__.py  config.py  main.py  services.py
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  index.css  types.ts
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  field.tsx  input.tsx  label.tsx  textarea.tsx  tooltip.tsx
scripts/: dev-down.sh  dev-up.sh  dev.sh  setup.sh
skills/tailor-resume/: SKILL.md
skills/tailor-resume/agents/: openai.yaml
skills/tailor-resume/references/: tailoring-rules.md
skills/tailor-resume/scripts/: create_variant.py  finalize_variant.py
tests/: test_api.py  test_config.py  test_services.py  test_tailor_resume_skill.py
