[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-studio"
version = "0.1.0"
description = "Local-first RenderCV resume variant workbench"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2",
  "PyYAML>=6",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
